# otel-presidio

./: Dockerfile  README.md  builder-config.yaml  builder.yaml  collector-config.yaml  config.go  docker-compose.yml  factory.go  go.mod  mise.toml
.github/workflows/: docker-publish-anonymizer.yml
anonymizer/: .dockerignore  Dockerfile  anonymizer.py  anonymizer_pb2_grpc.py  main.py  pyproject.toml
client/: anonymizer.pb.go
demo/: docker-compose.yml
demo/collector/: Dockerfile  builder-config.yaml
demo/config/: collector-config.yaml
demo/my-app/: .env.example  README.md  main.py  pyproject.toml  run.sh
presidioprocessor/: config.go  factory.go  go.mod  go.sum  processor.go  processor_test.go
presidioprocessor/client/: anonymizer.pb.go  generate.go
presido-anoymizer/: anonymizer.py  anonymizer_pb2.py  generate.sh  main.py  pyproject.toml
presido-anoymizer/tests/: test_service.py
processor/: go.mod  go.sum  processor.go  processor_test.go
processor/client/: anonymizer.pb.go  anonymizer_grpc.pb.go  generate.go
proto/: anonymizer.proto
