[project]
name = "presido-anoymizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.80.0",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "pydantic-settings>=2.14.1",
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.80.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
